--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <service android:name=".WhisperInputService"
             android:label="Whisper Input"
             android:permission="android.permission.BIND_INPUT_METHOD"
+            android:theme="@style/Theme.WhisperToInput"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
