--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 
-    This file is part of Whisper To Input, see <https://github.com/j3soon/whisper-to-input>.
+    This file is part of Whisper++, see <https://github.com/j3soon/whisper-to-input>.
 
     Copyright (c) 2023-2025 Yan-Bin Diau, Johnson Sun
 
@@ -39,7 +39,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <service android:name=".WhisperInputService"
-            android:label="Whisper Input"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_INPUT_METHOD"
             android:theme="@style/Theme.WhisperToInput"
             android:exported="true">
