docs: update links in headers and manifest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
 
-    This file is part of Whisper++, see <https://github.com/j3soon/whisper-to-input>.
+    This file is part of Whisper++, see <https://github.com/shekohex/whisperpp>.
 
     Copyright (c) 2023-2025 Yan-Bin Diau, Johnson Sun
 
